--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and<br>
         more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </p>
-        <p><u><a href="https://vercel.com/new/georgeiluridzes-projects/success?developer-id=&external-id=&redirect-url=&branch=main&deploymentUrl=table-img-anchor-k4blp7qjz-georgeiluridzes-projects.vercel.app&projectName=table-img-anchor&s=https%3A%2F%2Fgithub.com%2FGeorgeILuridze%2Ftable-img-anchor&gitOrgLimit=&hasTrialAvailable=1&totalProjects=1"> See more</a></u></p>
+        <p><u><a href="https://table-img-anchor.vercel.app/"> See more</a></u></p>
         <h3>Person List</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard<br>
             dummy text ever since the 1500s, when an <b><u>unknown printer took a galley of type and scrambled it to make a type</u></b><br>
